@@ -15,6 +15,16 @@ GNU sed NEWS                                    -*- outline -*-
   instead of the symlink target. [Bug present since at least sed-4.2]
   sed -i --follow-symlinks remains unchanged.
 
+  sed now treats the sequence '\x5c' (ASCII 92, backslash) as literal
+  backslash character, not as an escape prefix character.
+  [Bug present since sed-3.02.80]
+  Old behavior:
+     $ echo z | sed -E 's/(z)/\x5c1/' # identical to 's/(z)/\1/'
+     z
+  New behavior:
+     $ echo z | sed -E 's/(z)/\x5c1/'
+     \1
+
 
 * Noteworthy changes in release 4.4 (2017-02-03) [stable]
 
